--- a/NemoRx1/test-output/index.html
+++ b/NemoRx1/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\PRONIX7\AppData\Local\Temp\testng-eclipse-1015419738\testng-customsuite.xml</span>
+                    <span>C:\Users\PRONIX7\AppData\Local\Temp\testng-eclipse-4121196\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -90,7 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,12 +101,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.NemoRx.TestScripts.TestScript_03" hash-for-method="Log(phani@pronixinc.com, W&amp;lcome@2019)">Log(phani@pronixinc.com, W&lcome@2019)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.NemoRx.TestScripts.TestScript_02" hash-for-method="AddingWorkHour_deletingWorkHour(webtest39@nemohealth.com, Like2Bike!)">AddingWorkHour_deletingWorkHour(webtest39@nemohealth.com, Like2Bike!)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.NemoRx.TestScripts.TestScript_03" hash-for-method="Log(ratnakarg@pronixinc.com, W&amp;lcome@2019)">Log(ratnakarg@pronixinc.com, W&lcome@2019)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.NemoRx.TestScripts.TestScript_02" hash-for-method="AddingWorkHour_deletingWorkHour(phani@pronixinc.com, W&amp;lcome@2019)">AddingWorkHour_deletingWorkHour(phani@pronixinc.com, W&lcome@2019)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.NemoRx.TestScripts.TestScript_02" hash-for-method="AddingWorkHour_deletingWorkHour(ratnakarg@pronixinc.com, W&amp;lcome@2019)">AddingWorkHour_deletingWorkHour(ratnakarg@pronixinc.com, W&lcome@2019)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -124,22 +129,30 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.NemoRx.TestScripts.TestScript_03</span>
+              <span class="class-name">com.NemoRx.TestScripts.TestScript_02</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Log(phani@pronixinc.com, W&amp;lcome@2019)">
-                  </a> <!-- Log(phani@pronixinc.com, W&lcome@2019) -->
-                  <span class="method-name">Log</span>
+                  <a name="AddingWorkHour_deletingWorkHour(webtest39@nemohealth.com, Like2Bike!)">
+                  </a> <!-- AddingWorkHour_deletingWorkHour(webtest39@nemohealth.com, Like2Bike!) -->
+                  <span class="method-name">AddingWorkHour_deletingWorkHour</span>
+                  <span class="parameters">(webtest39@nemohealth.com, Like2Bike!)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="AddingWorkHour_deletingWorkHour(phani@pronixinc.com, W&amp;lcome@2019)">
+                  </a> <!-- AddingWorkHour_deletingWorkHour(phani@pronixinc.com, W&lcome@2019) -->
+                  <span class="method-name">AddingWorkHour_deletingWorkHour</span>
                   <span class="parameters">(phani@pronixinc.com, W&lcome@2019)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="Log(ratnakarg@pronixinc.com, W&amp;lcome@2019)">
-                  </a> <!-- Log(ratnakarg@pronixinc.com, W&lcome@2019) -->
-                  <span class="method-name">Log</span>
+                  <a name="AddingWorkHour_deletingWorkHour(ratnakarg@pronixinc.com, W&amp;lcome@2019)">
+                  </a> <!-- AddingWorkHour_deletingWorkHour(ratnakarg@pronixinc.com, W&lcome@2019) -->
+                  <span class="method-name">AddingWorkHour_deletingWorkHour</span>
                   <span class="parameters">(ratnakarg@pronixinc.com, W&lcome@2019)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
@@ -148,7 +161,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\PRONIX7\AppData\Local\Temp\testng-eclipse-1015419738\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\PRONIX7\AppData\Local\Temp\testng-eclipse-4121196\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -157,7 +170,7 @@
 &lt;suite name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.NemoRx.TestScripts.TestScript_03&quot;/&gt;
+      &lt;class name=&quot;com.NemoRx.TestScripts.TestScript_02&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -197,15 +210,19 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Log')
-data.setCell(0, 2, 'com.NemoRx.TestScripts.TestScript_03')
-data.setCell(0, 3, 42724);
+data.setCell(0, 1, 'AddingWorkHour_deletingWorkHour')
+data.setCell(0, 2, 'com.NemoRx.TestScripts.TestScript_02')
+data.setCell(0, 3, 30432);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'Log')
-data.setCell(1, 2, 'com.NemoRx.TestScripts.TestScript_03')
-data.setCell(1, 3, 42236);
+data.setCell(1, 1, 'AddingWorkHour_deletingWorkHour')
+data.setCell(1, 2, 'com.NemoRx.TestScripts.TestScript_02')
+data.setCell(1, 3, 29393);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'AddingWorkHour_deletingWorkHour')
+data.setCell(2, 2, 'com.NemoRx.TestScripts.TestScript_02')
+data.setCell(2, 3, 29316);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -221,18 +238,6 @@ return data;
             <span class="header-content">Reporter output for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="reporter-method-div">
-              <span class="reporter-method-name">Log(phani@pronixinc.com, W&lcome@2019)</span>
-              <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Profile Link From Side Menu Successfully opened</span>
-              </div> <!-- reporter-method-output-div -->
-            </div> <!-- reporter-method-div -->
-            <div class="reporter-method-div">
-              <span class="reporter-method-name">Log(ratnakarg@pronixinc.com, W&lcome@2019)</span>
-              <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Profile Link From Side Menu Successfully opened</span>
-              </div> <!-- reporter-method-output-div -->
-            </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
@@ -248,18 +253,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.NemoRx.TestScripts.TestScript_03</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.NemoRx.TestScripts.TestScript_02</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">Open</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">Log(ratnakarg@pronixinc.com, W&lcome@2019)</span>
-                <span class="method-start">22078 ms</span>
+                <span class="method-name">AddingWorkHour_deletingWorkHour(ratnakarg@pronixinc.com, W&lcome@2019)</span>
+                <span class="method-start">28311 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">Log(phani@pronixinc.com, W&lcome@2019)</span>
-                <span class="method-start">64803 ms</span>
+                <span class="method-name">AddingWorkHour_deletingWorkHour(phani@pronixinc.com, W&lcome@2019)</span>
+                <span class="method-start">58744 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">AddingWorkHour_deletingWorkHour(webtest39@nemohealth.com, Like2Bike!)</span>
+                <span class="method-start">88061 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
