--- a/NemoRx1/test-output/old/Default suite/methods-alphabetical.html
+++ b/NemoRx1/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="cf768c">  <td>19/04/29 16:44:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_03.Log(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_03@555590]">Log</td> 
+<tr bgcolor="cf768c">  <td>19/04/29 17:10:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_02.AddingWorkHour_deletingWorkHour(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_02@555590]">AddingWorkHour_deletingWorkHour</td> 
   <td>main@1870252780</td>   <td></td> </tr>
-<tr bgcolor="cf768c">  <td>19/04/29 16:45:36</td>   <td>42725</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_03.Log(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_03@555590]">Log</td> 
+<tr bgcolor="cf768c">  <td>19/04/29 17:11:28</td>   <td>30434</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_02.AddingWorkHour_deletingWorkHour(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_02@555590]">AddingWorkHour_deletingWorkHour</td> 
   <td>main@1870252780</td>   <td></td> </tr>
-<tr bgcolor="cf768c">  <td>19/04/29 16:44:31</td>   <td>-22076</td> <td>&nbsp;</td><td title="&gt;&gt;TestScript_03.Open()[pri:0, instance:com.NemoRx.TestScripts.TestScript_03@555590]">&gt;&gt;Open</td> 
+<tr bgcolor="cf768c">  <td>19/04/29 17:11:58</td>   <td>59750</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_02.AddingWorkHour_deletingWorkHour(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_02@555590]">AddingWorkHour_deletingWorkHour</td> 
+  <td>main@1870252780</td>   <td></td> </tr>
+<tr bgcolor="cf768c">  <td>19/04/29 17:10:30</td>   <td>-28308</td> <td>&nbsp;</td><td title="&gt;&gt;TestScript_02.Open()[pri:0, instance:com.NemoRx.TestScripts.TestScript_02@555590]">&gt;&gt;Open</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1870252780</td>   <td></td> </tr>
 </table>
