--- a/NemoRx1/test-output/old/Default suite/reporter-output.html
+++ b/NemoRx1/test-output/old/Default suite/reporter-output.html
@@ -1,3 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>Profile Link From Side Menu Successfully opened</td></tr>
-<tr><td>Profile Link From Side Menu Successfully opened</td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
