--- a/NemoRx1/test-output/index.html
+++ b/NemoRx1/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\PRONIX7\AppData\Local\Temp\testng-eclipse-4121196\testng-customsuite.xml</span>
+                    <span>C:\Users\PRONIX7\AppData\Local\Temp\testng-eclipse-1225941596\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -90,7 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,17 +101,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.NemoRx.TestScripts.TestScript_02" hash-for-method="AddingWorkHour_deletingWorkHour(webtest39@nemohealth.com, Like2Bike!)">AddingWorkHour_deletingWorkHour(webtest39@nemohealth.com, Like2Bike!)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.NemoRx.TestScripts.TestScript_01" hash-for-method="log(ratnakarg@pronixinc.com, W&amp;lcome@2019)">log(ratnakarg@pronixinc.com, W&lcome@2019)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.NemoRx.TestScripts.TestScript_02" hash-for-method="AddingWorkHour_deletingWorkHour(phani@pronixinc.com, W&amp;lcome@2019)">AddingWorkHour_deletingWorkHour(phani@pronixinc.com, W&lcome@2019)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.NemoRx.TestScripts.TestScript_02" hash-for-method="AddingWorkHour_deletingWorkHour(ratnakarg@pronixinc.com, W&amp;lcome@2019)">AddingWorkHour_deletingWorkHour(ratnakarg@pronixinc.com, W&lcome@2019)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.NemoRx.TestScripts.TestScript_01" hash-for-method="log(phani@pronixinc.com, W&amp;lcome@2019)">log(phani@pronixinc.com, W&lcome@2019)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -129,31 +124,23 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.NemoRx.TestScripts.TestScript_02</span>
+              <span class="class-name">com.NemoRx.TestScripts.TestScript_01</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="AddingWorkHour_deletingWorkHour(webtest39@nemohealth.com, Like2Bike!)">
-                  </a> <!-- AddingWorkHour_deletingWorkHour(webtest39@nemohealth.com, Like2Bike!) -->
-                  <span class="method-name">AddingWorkHour_deletingWorkHour</span>
-                  <span class="parameters">(webtest39@nemohealth.com, Like2Bike!)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="AddingWorkHour_deletingWorkHour(phani@pronixinc.com, W&amp;lcome@2019)">
-                  </a> <!-- AddingWorkHour_deletingWorkHour(phani@pronixinc.com, W&lcome@2019) -->
-                  <span class="method-name">AddingWorkHour_deletingWorkHour</span>
-                  <span class="parameters">(phani@pronixinc.com, W&lcome@2019)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="AddingWorkHour_deletingWorkHour(ratnakarg@pronixinc.com, W&amp;lcome@2019)">
-                  </a> <!-- AddingWorkHour_deletingWorkHour(ratnakarg@pronixinc.com, W&lcome@2019) -->
-                  <span class="method-name">AddingWorkHour_deletingWorkHour</span>
+                  <a name="log(ratnakarg@pronixinc.com, W&amp;lcome@2019)">
+                  </a> <!-- log(ratnakarg@pronixinc.com, W&lcome@2019) -->
+                  <span class="method-name">log</span>
                   <span class="parameters">(ratnakarg@pronixinc.com, W&lcome@2019)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="log(phani@pronixinc.com, W&amp;lcome@2019)">
+                  </a> <!-- log(phani@pronixinc.com, W&lcome@2019) -->
+                  <span class="method-name">log</span>
+                  <span class="parameters">(phani@pronixinc.com, W&lcome@2019)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -161,7 +148,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\PRONIX7\AppData\Local\Temp\testng-eclipse-4121196\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\PRONIX7\AppData\Local\Temp\testng-eclipse-1225941596\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -170,7 +157,7 @@
 &lt;suite name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.NemoRx.TestScripts.TestScript_02&quot;/&gt;
+      &lt;class name=&quot;com.NemoRx.TestScripts.TestScript_01&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -210,24 +197,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'AddingWorkHour_deletingWorkHour')
-data.setCell(0, 2, 'com.NemoRx.TestScripts.TestScript_02')
-data.setCell(0, 3, 30432);
+data.setCell(0, 1, 'log')
+data.setCell(0, 2, 'com.NemoRx.TestScripts.TestScript_01')
+data.setCell(0, 3, 21349);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'AddingWorkHour_deletingWorkHour')
-data.setCell(1, 2, 'com.NemoRx.TestScripts.TestScript_02')
-data.setCell(1, 3, 29393);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'AddingWorkHour_deletingWorkHour')
-data.setCell(2, 2, 'com.NemoRx.TestScripts.TestScript_02')
-data.setCell(2, 3, 29316);
+data.setCell(1, 1, 'log')
+data.setCell(1, 2, 'com.NemoRx.TestScripts.TestScript_01')
+data.setCell(1, 3, 19405);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 40 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -238,6 +221,22 @@ return data;
             <span class="header-content">Reporter output for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">log(ratnakarg@pronixinc.com, W&lcome@2019)</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">Successfully login completed</span>
+                <span class="reporter-method-output">Page Title-NEMORx</span>
+                <span class="reporter-method-output">Logout Successfully completed</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">log(phani@pronixinc.com, W&lcome@2019)</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">Successfully login completed</span>
+                <span class="reporter-method-output">Page Title-NEMORx</span>
+                <span class="reporter-method-output">Logout Successfully completed</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
@@ -253,23 +252,23 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.NemoRx.TestScripts.TestScript_02</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.NemoRx.TestScripts.TestScript_01</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">Open</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">AddingWorkHour_deletingWorkHour(ratnakarg@pronixinc.com, W&lcome@2019)</span>
-                <span class="method-start">28311 ms</span>
+                <span class="method-name">log(ratnakarg@pronixinc.com, W&lcome@2019)</span>
+                <span class="method-start">21738 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">AddingWorkHour_deletingWorkHour(phani@pronixinc.com, W&lcome@2019)</span>
-                <span class="method-start">58744 ms</span>
+                <span class="method-name">log(phani@pronixinc.com, W&lcome@2019)</span>
+                <span class="method-start">43087 ms</span>
               </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">AddingWorkHour_deletingWorkHour(webtest39@nemohealth.com, Like2Bike!)</span>
-                <span class="method-start">88061 ms</span>
-              </div> <!-- test-method -->
+              <div class="configuration-test after">
+                <span class="method-name">Close</span>
+                <span class="method-start">62493 ms</span>
+              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
