--- a/NemoRx1/test-output/old/Default suite/reporter-output.html
+++ b/NemoRx1/test-output/old/Default suite/reporter-output.html
@@ -1,1 +1,7 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>Successfully login completed</td></tr>
+<tr><td>Page Title-NEMORx</td></tr>
+<tr><td>Logout Successfully completed</td></tr>
+<tr><td>Successfully login completed</td></tr>
+<tr><td>Page Title-NEMORx</td></tr>
+<tr><td>Logout Successfully completed</td></tr>
+</table>
