--- a/NemoRx1/test-output/old/Default suite/reporter-output.html
+++ b/NemoRx1/test-output/old/Default suite/reporter-output.html
@@ -1,7 +1,8 @@
 <h2>Reporter output</h2><table><tr><td>Successfully login completed</td></tr>
 <tr><td>Page Title-NEMORx</td></tr>
-<tr><td>Logout Successfully completed</td></tr>
-<tr><td>Successfully login completed</td></tr>
-<tr><td>Page Title-NEMORx</td></tr>
-<tr><td>Logout Successfully completed</td></tr>
+<tr><td>Page 2 Title==NEMORx</td></tr>
+<tr><td>Name of patient==joan</td></tr>
+<tr><td>Page 3 Title==NEMORx</td></tr>
+<tr><td>Drug Selected</td></tr>
+<tr><td>Successfully added medication. Would you like to add another medication?</td></tr>
 </table>
