--- a/NemoRx1/test-output/index.html
+++ b/NemoRx1/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\PRONIX7\AppData\Local\Temp\testng-eclipse-1225941596\testng-customsuite.xml</span>
+                    <span>C:\Users\PRONIX7\AppData\Local\Temp\testng-eclipse--2050931217\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -90,7 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,12 +101,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.NemoRx.TestScripts.TestScript_01" hash-for-method="log(ratnakarg@pronixinc.com, W&amp;lcome@2019)">log(ratnakarg@pronixinc.com, W&lcome@2019)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.NemoRx.TestScripts.TestScript_01" hash-for-method="log(phani@pronixinc.com, W&amp;lcome@2019)">log(phani@pronixinc.com, W&lcome@2019)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.NemoRx.TestScripts.TestScript_04" hash-for-method="SearchPatientAddMedication(ratnakarg@pronixinc.com, W&amp;lcome@2019)">SearchPatientAddMedication(ratnakarg@pronixinc.com, W&lcome@2019)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -124,23 +119,15 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.NemoRx.TestScripts.TestScript_01</span>
+              <span class="class-name">com.NemoRx.TestScripts.TestScript_04</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="log(ratnakarg@pronixinc.com, W&amp;lcome@2019)">
-                  </a> <!-- log(ratnakarg@pronixinc.com, W&lcome@2019) -->
-                  <span class="method-name">log</span>
+                  <a name="SearchPatientAddMedication(ratnakarg@pronixinc.com, W&amp;lcome@2019)">
+                  </a> <!-- SearchPatientAddMedication(ratnakarg@pronixinc.com, W&lcome@2019) -->
+                  <span class="method-name">SearchPatientAddMedication</span>
                   <span class="parameters">(ratnakarg@pronixinc.com, W&lcome@2019)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="log(phani@pronixinc.com, W&amp;lcome@2019)">
-                  </a> <!-- log(phani@pronixinc.com, W&lcome@2019) -->
-                  <span class="method-name">log</span>
-                  <span class="parameters">(phani@pronixinc.com, W&lcome@2019)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -148,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\PRONIX7\AppData\Local\Temp\testng-eclipse-1225941596\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\PRONIX7\AppData\Local\Temp\testng-eclipse--2050931217\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -157,7 +144,7 @@
 &lt;suite name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.NemoRx.TestScripts.TestScript_01&quot;/&gt;
+      &lt;class name=&quot;com.NemoRx.TestScripts.TestScript_04&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -197,20 +184,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'log')
-data.setCell(0, 2, 'com.NemoRx.TestScripts.TestScript_01')
-data.setCell(0, 3, 21349);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'log')
-data.setCell(1, 2, 'com.NemoRx.TestScripts.TestScript_01')
-data.setCell(1, 3, 19405);
+data.setCell(0, 1, 'SearchPatientAddMedication')
+data.setCell(0, 2, 'com.NemoRx.TestScripts.TestScript_04')
+data.setCell(0, 3, 24528);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 40 seconds</span>
+              <span class="suite-total-time">Total running time: 24 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -222,19 +205,15 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="reporter-method-div">
-              <span class="reporter-method-name">log(ratnakarg@pronixinc.com, W&lcome@2019)</span>
+              <span class="reporter-method-name">SearchPatientAddMedication(ratnakarg@pronixinc.com, W&lcome@2019)</span>
               <div class="reporter-method-output-div">
                 <span class="reporter-method-output">Successfully login completed</span>
                 <span class="reporter-method-output">Page Title-NEMORx</span>
-                <span class="reporter-method-output">Logout Successfully completed</span>
-              </div> <!-- reporter-method-output-div -->
-            </div> <!-- reporter-method-div -->
-            <div class="reporter-method-div">
-              <span class="reporter-method-name">log(phani@pronixinc.com, W&lcome@2019)</span>
-              <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Successfully login completed</span>
-                <span class="reporter-method-output">Page Title-NEMORx</span>
-                <span class="reporter-method-output">Logout Successfully completed</span>
+                <span class="reporter-method-output">Page 2 Title==NEMORx</span>
+                <span class="reporter-method-output">Name of patient==joan</span>
+                <span class="reporter-method-output">Page 3 Title==NEMORx</span>
+                <span class="reporter-method-output">Drug Selected</span>
+                <span class="reporter-method-output">Successfully added medication. Would you like to add another medication?</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -252,23 +231,19 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.NemoRx.TestScripts.TestScript_01</div> <!-- chronological-class-name -->
-              <div class="configuration-test before">
+              <div class="chronological-class-name">com.NemoRx.TestScripts.TestScript_04</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
                 <span class="method-name">Open</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-test before -->
+              </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">log(ratnakarg@pronixinc.com, W&lcome@2019)</span>
-                <span class="method-start">21738 ms</span>
+                <span class="method-name">SearchPatientAddMedication(ratnakarg@pronixinc.com, W&lcome@2019)</span>
+                <span class="method-start">19799 ms</span>
               </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">log(phani@pronixinc.com, W&lcome@2019)</span>
-                <span class="method-start">43087 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-test after">
+              <div class="configuration-class after">
                 <span class="method-name">Close</span>
-                <span class="method-start">62493 ms</span>
-              </div> <!-- configuration-test after -->
+                <span class="method-start">44328 ms</span>
+              </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
