--- a/NemoRx1/test-output/old/Suite/classes.html
+++ b/NemoRx1/test-output/old/Suite/classes.html
@@ -71,7 +71,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>log</td>
+<td>loginAndLogout</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
