--- a/NemoRx1/test-output/old/Suite/methods.html
+++ b/NemoRx1/test-output/old/Suite/methods.html
@@ -1,38 +1,38 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="73da75">  <td>19/04/29 22:17:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestScript_01.Open()[pri:0, instance:com.NemoRx.TestScripts.TestScript_01@769c9116]">&gt;&gt;Open</td> 
+<tr bgcolor="73da75">  <td>19/04/30 10:40:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestScript_01.Open()[pri:0, instance:com.NemoRx.TestScripts.TestScript_01@769c9116]">&gt;&gt;Open</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@451111351</td>   <td></td> </tr>
-<tr bgcolor="73da75">  <td>19/04/29 22:17:49</td>   <td>18453</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_01.log(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_01@769c9116]">log</td> 
+<tr bgcolor="73da75">  <td>19/04/30 10:40:54</td>   <td>39172</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_01.loginAndLogout(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_01@769c9116]">loginAndLogout</td> 
   <td>main@451111351</td>   <td></td> </tr>
-<tr bgcolor="73da75">  <td>19/04/29 22:18:10</td>   <td>39154</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_01.log(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_01@769c9116]">log</td> 
+<tr bgcolor="73da75">  <td>19/04/30 10:41:54</td>   <td>99703</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_01.loginAndLogout(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_01@769c9116]">loginAndLogout</td> 
   <td>main@451111351</td>   <td></td> </tr>
-<tr bgcolor="73da75">  <td>19/04/29 22:18:30</td>   <td>58736</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestScript_01.Close()[pri:0, instance:com.NemoRx.TestScripts.TestScript_01@769c9116]">&lt;&lt;Close</td> 
+<tr bgcolor="73da75">  <td>19/04/30 10:42:14</td>   <td>119543</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestScript_01.Close()[pri:0, instance:com.NemoRx.TestScripts.TestScript_01@769c9116]">&lt;&lt;Close</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@451111351</td>   <td></td> </tr>
-<tr bgcolor="75b6fd">  <td>19/04/29 22:18:30</td>   <td>59375</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestScript_02.Open()[pri:0, instance:com.NemoRx.TestScripts.TestScript_02@6aceb1a5]">&gt;&gt;Open</td> 
+<tr bgcolor="75b6fd">  <td>19/04/30 10:42:15</td>   <td>120202</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestScript_02.Open()[pri:0, instance:com.NemoRx.TestScripts.TestScript_02@6aceb1a5]">&gt;&gt;Open</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@451111351</td>   <td></td> </tr>
-<tr bgcolor="75b6fd">  <td>19/04/29 22:18:46</td>   <td>74642</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_02.AddingWorkHour_deletingWorkHour(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_02@6aceb1a5]">AddingWorkHour_deletingWorkHour</td> 
+<tr bgcolor="75b6fd">  <td>19/04/30 10:42:36</td>   <td>141905</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_02.AddingWorkHour_deletingWorkHour(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_02@6aceb1a5]">AddingWorkHour_deletingWorkHour</td> 
   <td>main@451111351</td>   <td></td> </tr>
-<tr bgcolor="75b6fd">  <td>19/04/29 22:19:15</td>   <td>103702</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_02.AddingWorkHour_deletingWorkHour(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_02@6aceb1a5]">AddingWorkHour_deletingWorkHour</td> 
+<tr bgcolor="75b6fd">  <td>19/04/30 10:43:13</td>   <td>178243</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_02.AddingWorkHour_deletingWorkHour(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_02@6aceb1a5]">AddingWorkHour_deletingWorkHour</td> 
   <td>main@451111351</td>   <td></td> </tr>
-<tr bgcolor="75b6fd">  <td>19/04/29 22:19:42</td>   <td>131450</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_02.AddingWorkHour_deletingWorkHour(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_02@6aceb1a5]">AddingWorkHour_deletingWorkHour</td> 
+<tr bgcolor="75b6fd">  <td>19/04/30 10:43:42</td>   <td>207211</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_02.AddingWorkHour_deletingWorkHour(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_02@6aceb1a5]">AddingWorkHour_deletingWorkHour</td> 
   <td>main@451111351</td>   <td></td> </tr>
-<tr bgcolor="75b6fd">  <td>19/04/29 22:20:10</td>   <td>159475</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestScript_02.Close()[pri:0, instance:com.NemoRx.TestScripts.TestScript_02@6aceb1a5]">&lt;&lt;Close</td> 
+<tr bgcolor="75b6fd">  <td>19/04/30 10:44:11</td>   <td>236146</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestScript_02.Close()[pri:0, instance:com.NemoRx.TestScripts.TestScript_02@6aceb1a5]">&lt;&lt;Close</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@451111351</td>   <td></td> </tr>
-<tr bgcolor="8299c8">  <td>19/04/29 22:20:11</td>   <td>160130</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestScript_03.Open()[pri:0, instance:com.NemoRx.TestScripts.TestScript_03@2d6d8735]">&gt;&gt;Open</td> 
+<tr bgcolor="8299c8">  <td>19/04/30 10:44:11</td>   <td>236787</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestScript_03.Open()[pri:0, instance:com.NemoRx.TestScripts.TestScript_03@2d6d8735]">&gt;&gt;Open</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@451111351</td>   <td></td> </tr>
-<tr bgcolor="8299c8">  <td>19/04/29 22:20:29</td>   <td>177861</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_03.VerifyingLinksFromSideMenu(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_03@2d6d8735]">VerifyingLinksFromSideMenu</td> 
+<tr bgcolor="8299c8">  <td>19/04/30 10:44:35</td>   <td>260178</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_03.VerifyingLinksFromSideMenu(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_03@2d6d8735]">VerifyingLinksFromSideMenu</td> 
   <td>main@451111351</td>   <td></td> </tr>
-<tr bgcolor="8299c8">  <td>19/04/29 22:21:11</td>   <td>220454</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_03.VerifyingLinksFromSideMenu(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_03@2d6d8735]">VerifyingLinksFromSideMenu</td> 
+<tr bgcolor="8299c8">  <td>19/04/30 10:45:21</td>   <td>306772</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_03.VerifyingLinksFromSideMenu(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_03@2d6d8735]">VerifyingLinksFromSideMenu</td> 
   <td>main@451111351</td>   <td></td> </tr>
-<tr bgcolor="8299c8">  <td>19/04/29 22:21:54</td>   <td>262756</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_03.VerifyingLinksFromSideMenu(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_03@2d6d8735]">VerifyingLinksFromSideMenu</td> 
+<tr bgcolor="8299c8">  <td>19/04/30 10:46:05</td>   <td>350152</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_03.VerifyingLinksFromSideMenu(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_03@2d6d8735]">VerifyingLinksFromSideMenu</td> 
   <td>main@451111351</td>   <td></td> </tr>
-<tr bgcolor="8299c8">  <td>19/04/29 22:22:36</td>   <td>304989</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestScript_03.Close()[pri:0, instance:com.NemoRx.TestScripts.TestScript_03@2d6d8735]">&lt;&lt;Close</td> 
+<tr bgcolor="8299c8">  <td>19/04/30 10:46:49</td>   <td>394593</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestScript_03.Close()[pri:0, instance:com.NemoRx.TestScripts.TestScript_03@2d6d8735]">&lt;&lt;Close</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@451111351</td>   <td></td> </tr>
-<tr bgcolor="e89d68">  <td>19/04/29 22:22:37</td>   <td>305632</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestScript_04.Open()[pri:0, instance:com.NemoRx.TestScripts.TestScript_04@66133adc]">&gt;&gt;Open</td> 
+<tr bgcolor="e89d68">  <td>19/04/30 10:46:50</td>   <td>395619</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestScript_04.Open()[pri:0, instance:com.NemoRx.TestScripts.TestScript_04@66133adc]">&gt;&gt;Open</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@451111351</td>   <td></td> </tr>
-<tr bgcolor="e89d68">  <td>19/04/29 22:23:00</td>   <td>328831</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_04.SearchPatientAddMedication(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_04@66133adc]">SearchPatientAddMedication</td> 
+<tr bgcolor="e89d68">  <td>19/04/30 10:48:00</td>   <td>465916</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_04.SearchPatientAddMedication(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_04@66133adc]">SearchPatientAddMedication</td> 
   <td>main@451111351</td>   <td></td> </tr>
-<tr bgcolor="e89d68">  <td>19/04/29 22:23:23</td>   <td>352151</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestScript_04.Close()[pri:0, instance:com.NemoRx.TestScripts.TestScript_04@66133adc]">&lt;&lt;Close</td> 
+<tr bgcolor="e89d68">  <td>19/04/30 10:49:06</td>   <td>532046</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestScript_04.Close()[pri:0, instance:com.NemoRx.TestScripts.TestScript_04@66133adc]">&lt;&lt;Close</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@451111351</td>   <td></td> </tr>
 </table>
