test6 adding Patient

--- a/NemoRx1/test-output/old/Default suite/reporter-output.html
+++ b/NemoRx1/test-output/old/Default suite/reporter-output.html
@@ -1,7 +1,9 @@
 <h2>Reporter output</h2><table><tr><td>Successfully login completed</td></tr>
 <tr><td>Page Title-NEMORx</td></tr>
-<tr><td>Logout Successfully completed</td></tr>
-<tr><td>Successfully login completed</td></tr>
-<tr><td>Page Title-NEMORx</td></tr>
+<tr><td>Account Number-3123454</td></tr>
+<tr><td>FirstName-XNGPJ</td></tr>
+<tr><td>Date of Birth-2/18/1991</td></tr>
+<tr><td>Drug Selected</td></tr>
+<tr><td>Successfully added medication. Would you like to add another medication?</td></tr>
 <tr><td>Logout Successfully completed</td></tr>
 </table>
