--- a/NemoRx1/test-output/old/Default suite/reporter-output.html
+++ b/NemoRx1/test-output/old/Default suite/reporter-output.html
@@ -1,5 +1,13 @@
 <h2>Reporter output</h2><table><tr><td>Successfully login completed</td></tr>
 <tr><td>Page Title-NEMORx</td></tr>
-<tr><td>Clicked on Alertbell</td></tr>
-<tr><td>Clicked on History button</td></tr>
+<tr><td>Account Number-4123457</td></tr>
+<tr><td>FirstName-OFCEJ</td></tr>
+<tr><td>Date of Birth-05/071966</td></tr>
+<tr><td>Patient Added Successfully-Name Of the PatientOFCEJ OFCEJ</td></tr>
+<tr><td>Page 2 Title==NEMORx</td></tr>
+<tr><td>Name of patient==OFCEJ</td></tr>
+<tr><td>Page 3 Title==NEMORx</td></tr>
+<tr><td>Drug Selected</td></tr>
+<tr><td>Successfully added medication. Would you like to add another medication?</td></tr>
+<tr><td>Logout Successfully completed</td></tr>
 </table>
