--- a/NemoRx1/test-output/old/Default suite/classes.html
+++ b/NemoRx1/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.NemoRx.TestScripts.TestScripts_07</td>
+<td>com.NemoRx.TestScripts.TestScript_06</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Alert</td>
+<td>AddPatientAndMedication</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
