--- a/NemoRx1/test-output/index.html
+++ b/NemoRx1/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\PRONIX7\AppData\Local\Temp\testng-eclipse--565936798\testng-customsuite.xml</span>
+                    <span>C:\Users\PRONIX7\AppData\Local\Temp\testng-eclipse-658492533\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -101,7 +101,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.NemoRx.TestScripts.TestScript_06" hash-for-method="AddPatientAndMedication">AddPatientAndMedication</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.NemoRx.TestScripts.TestScript_08" hash-for-method="AddingAllergies">AddingAllergies</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -119,14 +119,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.NemoRx.TestScripts.TestScript_06</span>
+              <span class="class-name">com.NemoRx.TestScripts.TestScript_08</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="AddPatientAndMedication">
-                  </a> <!-- AddPatientAndMedication -->
-                  <span class="method-name">AddPatientAndMedication</span>
+                  <a name="AddingAllergies">
+                  </a> <!-- AddingAllergies -->
+                  <span class="method-name">AddingAllergies</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -134,7 +134,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\PRONIX7\AppData\Local\Temp\testng-eclipse--565936798\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\PRONIX7\AppData\Local\Temp\testng-eclipse-658492533\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -143,7 +143,7 @@
 &lt;suite name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.NemoRx.TestScripts.TestScript_06&quot;/&gt;
+      &lt;class name=&quot;com.NemoRx.TestScripts.TestScript_08&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -185,14 +185,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'AddPatientAndMedication')
-data.setCell(0, 2, 'com.NemoRx.TestScripts.TestScript_06')
-data.setCell(0, 3, 72004);
+data.setCell(0, 1, 'AddingAllergies')
+data.setCell(0, 2, 'com.NemoRx.TestScripts.TestScript_08')
+data.setCell(0, 3, 42722);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 42 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -204,20 +204,11 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="reporter-method-div">
-              <span class="reporter-method-name">AddPatientAndMedication</span>
+              <span class="reporter-method-name">AddingAllergies</span>
               <div class="reporter-method-output-div">
                 <span class="reporter-method-output">Successfully login completed</span>
                 <span class="reporter-method-output">Page Title-NEMORx</span>
-                <span class="reporter-method-output">Account Number-4123457</span>
-                <span class="reporter-method-output">FirstName-OFCEJ</span>
-                <span class="reporter-method-output">Date of Birth-05/071966</span>
-                <span class="reporter-method-output">Patient Added Successfully-Name Of the PatientOFCEJ OFCEJ</span>
-                <span class="reporter-method-output">Page 2 Title==NEMORx</span>
-                <span class="reporter-method-output">Name of patient==OFCEJ</span>
-                <span class="reporter-method-output">Page 3 Title==NEMORx</span>
-                <span class="reporter-method-output">Drug Selected</span>
-                <span class="reporter-method-output">Successfully added medication. Would you like to add another medication?</span>
-                <span class="reporter-method-output">Logout Successfully completed</span>
+                <span class="reporter-method-output">Name of patient==rathnaa</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -235,9 +226,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.NemoRx.TestScripts.TestScript_06</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.NemoRx.TestScripts.TestScript_08</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">AddPatientAndMedication</span>
+                <span class="method-name">AddingAllergies</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
