--- a/NemoRx1/test-output/old/Default suite/methods.html
+++ b/NemoRx1/test-output/old/Default suite/methods.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="cf768c">  <td>19/05/06 21:29:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_06.AddPatientAndMedication()[pri:0, instance:com.NemoRx.TestScripts.TestScript_06@1761e840]">AddPatientAndMedication</td> 
+<tr bgcolor="cf768c">  <td>19/05/06 22:55:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_08.AddingAllergies()[pri:0, instance:com.NemoRx.TestScripts.TestScript_08@1761e840]">AddingAllergies</td> 
   <td>main@2094777811</td>   <td></td> </tr>
 </table>
