Button Verification on adding allergies on patient chart

--- a/NemoRx1/test-output/old/Default suite/classes.html
+++ b/NemoRx1/test-output/old/Default suite/classes.html
@@ -4,14 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.NemoRx.TestScripts.Test8</td>
+<td>com.NemoRx.TestScripts.TestScript_08</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>SummaryMedicationButtonVerification</td>
+<td>AllergiesButtonsVerificationOnPatientChart</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>MedicationsButtonsVerificationOnPatientChart</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
