--- a/NemoRx1/test-output/index.html
+++ b/NemoRx1/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\PRONIX7\AppData\Local\Temp\testng-eclipse--714680840\testng-customsuite.xml</span>
+                    <span>C:\Users\PRONIX7\AppData\Local\Temp\testng-eclipse--508975928\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -90,7 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,7 +101,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.NemoRx.TestScripts.Test8" hash-for-method="SummaryMedicationButtonVerification">SummaryMedicationButtonVerification</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.NemoRx.TestScripts.TestScript_08" hash-for-method="AllergiesButtonsVerificationOnPatientChart">AllergiesButtonsVerificationOnPatientChart</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.NemoRx.TestScripts.TestScript_08" hash-for-method="MedicationsButtonsVerificationOnPatientChart">MedicationsButtonsVerificationOnPatientChart</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -119,14 +124,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.NemoRx.TestScripts.Test8</span>
+              <span class="class-name">com.NemoRx.TestScripts.TestScript_08</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="SummaryMedicationButtonVerification">
-                  </a> <!-- SummaryMedicationButtonVerification -->
-                  <span class="method-name">SummaryMedicationButtonVerification</span>
+                  <a name="AllergiesButtonsVerificationOnPatientChart">
+                  </a> <!-- AllergiesButtonsVerificationOnPatientChart -->
+                  <span class="method-name">AllergiesButtonsVerificationOnPatientChart</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="MedicationsButtonsVerificationOnPatientChart">
+                  </a> <!-- MedicationsButtonsVerificationOnPatientChart -->
+                  <span class="method-name">MedicationsButtonsVerificationOnPatientChart</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -134,7 +146,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\PRONIX7\AppData\Local\Temp\testng-eclipse--714680840\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\PRONIX7\AppData\Local\Temp\testng-eclipse--508975928\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -143,7 +155,7 @@
 &lt;suite name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.NemoRx.TestScripts.Test8&quot;/&gt;
+      &lt;class name=&quot;com.NemoRx.TestScripts.TestScript_08&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -183,16 +195,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'SummaryMedicationButtonVerification')
-data.setCell(0, 2, 'com.NemoRx.TestScripts.Test8')
-data.setCell(0, 3, 44282);
+data.setCell(0, 1, 'AllergiesButtonsVerificationOnPatientChart')
+data.setCell(0, 2, 'com.NemoRx.TestScripts.TestScript_08')
+data.setCell(0, 3, 39939);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'MedicationsButtonsVerificationOnPatientChart')
+data.setCell(1, 2, 'com.NemoRx.TestScripts.TestScript_08')
+data.setCell(1, 3, 37498);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 44 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -204,13 +220,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="reporter-method-div">
-              <span class="reporter-method-name">SummaryMedicationButtonVerification</span>
+              <span class="reporter-method-name">AllergiesButtonsVerificationOnPatientChart</span>
               <div class="reporter-method-output-div">
                 <span class="reporter-method-output">Successfully login completed</span>
                 <span class="reporter-method-output">Page Title-NEMORx</span>
                 <span class="reporter-method-output">Name of patient==rathnaa</span>
-                <span class="reporter-method-output">Drug Selected</span>
-                <span class="reporter-method-output">Successfully added medication. Would you like to add another medication?</span>
+                <span class="reporter-method-output">Edit allergy Button = true</span>
+                <span class="reporter-method-output">Delete allergy Button = true</span>
+                <span class="reporter-method-output">Logout Successfully completed</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">MedicationsButtonsVerificationOnPatientChart</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">Successfully login completed</span>
+                <span class="reporter-method-output">Page Title-NEMORx</span>
+                <span class="reporter-method-output">Name of patient==rathnaa</span>
+                <span class="reporter-method-output">Send Medication Button = true</span>
+                <span class="reporter-method-output">Medication Edit button = true</span>
+                <span class="reporter-method-output">Delete Medication Button = true</span>
+                <span class="reporter-method-output">Logout Successfully completed</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -228,10 +257,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.NemoRx.TestScripts.Test8</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.NemoRx.TestScripts.TestScript_08</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">SummaryMedicationButtonVerification</span>
+                <span class="method-name">AllergiesButtonsVerificationOnPatientChart</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">MedicationsButtonsVerificationOnPatientChart</span>
+                <span class="method-start">39941 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
