--- a/NemoRx1/test-output/old/Default suite/methods.html
+++ b/NemoRx1/test-output/old/Default suite/methods.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="cf768c">  <td>19/05/07 20:45:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test8.SummaryMedicationButtonVerification()[pri:0, instance:com.NemoRx.TestScripts.Test8@4f47d241]">SummaryMedicationButtonVerification</td> 
-  <td>main@717356484</td>   <td></td> </tr>
+<tr bgcolor="cf768c">  <td>19/05/07 21:21:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_08.AllergiesButtonsVerificationOnPatientChart()[pri:0, instance:com.NemoRx.TestScripts.TestScript_08@1761e840]">AllergiesButtonsVerificationOnPatientChart</td> 
+  <td>main@2094777811</td>   <td></td> </tr>
+<tr bgcolor="cf768c">  <td>19/05/07 21:21:59</td>   <td>39940</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_08.MedicationsButtonsVerificationOnPatientChart()[pri:0, instance:com.NemoRx.TestScripts.TestScript_08@1761e840]">MedicationsButtonsVerificationOnPatientChart</td> 
+  <td>main@2094777811</td>   <td></td> </tr>
 </table>
