--- a/NemoRx1/test-output/index.html
+++ b/NemoRx1/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\PRONIX7\AppData\Local\Temp\testng-eclipse--508975928\testng-customsuite.xml</span>
+                    <span>C:\Users\PRONIX7\AppData\Local\Temp\testng-eclipse--1493214226\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -90,7 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,12 +101,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.NemoRx.TestScripts.TestScript_08" hash-for-method="AllergiesButtonsVerificationOnPatientChart">AllergiesButtonsVerificationOnPatientChart</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.NemoRx.TestScripts.TestScript_08" hash-for-method="MedicationsButtonsVerificationOnPatientChart">MedicationsButtonsVerificationOnPatientChart</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.NemoRx.TestScripts.TestScript_04" hash-for-method="SearchPatientAddMedication(ratnakarg@pronixinc.com, Rathna@299299)">SearchPatientAddMedication(ratnakarg@pronixinc.com, Rathna@299299)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -124,21 +119,15 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.NemoRx.TestScripts.TestScript_08</span>
+              <span class="class-name">com.NemoRx.TestScripts.TestScript_04</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="AllergiesButtonsVerificationOnPatientChart">
-                  </a> <!-- AllergiesButtonsVerificationOnPatientChart -->
-                  <span class="method-name">AllergiesButtonsVerificationOnPatientChart</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="MedicationsButtonsVerificationOnPatientChart">
-                  </a> <!-- MedicationsButtonsVerificationOnPatientChart -->
-                  <span class="method-name">MedicationsButtonsVerificationOnPatientChart</span>
+                  <a name="SearchPatientAddMedication(ratnakarg@pronixinc.com, Rathna@299299)">
+                  </a> <!-- SearchPatientAddMedication(ratnakarg@pronixinc.com, Rathna@299299) -->
+                  <span class="method-name">SearchPatientAddMedication</span>
+                  <span class="parameters">(ratnakarg@pronixinc.com, Rathna@299299)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -146,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\PRONIX7\AppData\Local\Temp\testng-eclipse--508975928\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\PRONIX7\AppData\Local\Temp\testng-eclipse--1493214226\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -155,7 +144,7 @@
 &lt;suite name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.NemoRx.TestScripts.TestScript_08&quot;/&gt;
+      &lt;class name=&quot;com.NemoRx.TestScripts.TestScript_04&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -195,20 +184,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'AllergiesButtonsVerificationOnPatientChart')
-data.setCell(0, 2, 'com.NemoRx.TestScripts.TestScript_08')
-data.setCell(0, 3, 39939);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'MedicationsButtonsVerificationOnPatientChart')
-data.setCell(1, 2, 'com.NemoRx.TestScripts.TestScript_08')
-data.setCell(1, 3, 37498);
+data.setCell(0, 1, 'SearchPatientAddMedication')
+data.setCell(0, 2, 'com.NemoRx.TestScripts.TestScript_04')
+data.setCell(0, 3, 35241);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 35 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -220,26 +205,15 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="reporter-method-div">
-              <span class="reporter-method-name">AllergiesButtonsVerificationOnPatientChart</span>
+              <span class="reporter-method-name">SearchPatientAddMedication(ratnakarg@pronixinc.com, Rathna@299299)</span>
               <div class="reporter-method-output-div">
                 <span class="reporter-method-output">Successfully login completed</span>
                 <span class="reporter-method-output">Page Title-NEMORx</span>
-                <span class="reporter-method-output">Name of patient==rathnaa</span>
-                <span class="reporter-method-output">Edit allergy Button = true</span>
-                <span class="reporter-method-output">Delete allergy Button = true</span>
-                <span class="reporter-method-output">Logout Successfully completed</span>
-              </div> <!-- reporter-method-output-div -->
-            </div> <!-- reporter-method-div -->
-            <div class="reporter-method-div">
-              <span class="reporter-method-name">MedicationsButtonsVerificationOnPatientChart</span>
-              <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Successfully login completed</span>
-                <span class="reporter-method-output">Page Title-NEMORx</span>
-                <span class="reporter-method-output">Name of patient==rathnaa</span>
-                <span class="reporter-method-output">Send Medication Button = true</span>
-                <span class="reporter-method-output">Medication Edit button = true</span>
-                <span class="reporter-method-output">Delete Medication Button = true</span>
-                <span class="reporter-method-output">Logout Successfully completed</span>
+                <span class="reporter-method-output">Name of patient==YBLKXSZI</span>
+                <span class="reporter-method-output">Add medication Button = true</span>
+                <span class="reporter-method-output">Drug Selected</span>
+                <span class="reporter-method-output">Successfully added medication. Would you like to add another medication?</span>
+                <span class="reporter-method-output">Successfully created allergy. Would you like to add another allergy?</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -257,15 +231,19 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.NemoRx.TestScripts.TestScript_08</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">AllergiesButtonsVerificationOnPatientChart</span>
+              <div class="chronological-class-name">com.NemoRx.TestScripts.TestScript_04</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">Open</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
+              </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">MedicationsButtonsVerificationOnPatientChart</span>
-                <span class="method-start">39941 ms</span>
+                <span class="method-name">SearchPatientAddMedication(ratnakarg@pronixinc.com, Rathna@299299)</span>
+                <span class="method-start">20721 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-class after">
+                <span class="method-name">Close</span>
+                <span class="method-start">55963 ms</span>
+              </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
