--- a/NemoRx1/test-output/old/Default suite/reporter-output.html
+++ b/NemoRx1/test-output/old/Default suite/reporter-output.html
@@ -1,14 +1,8 @@
 <h2>Reporter output</h2><table><tr><td>Successfully login completed</td></tr>
 <tr><td>Page Title-NEMORx</td></tr>
-<tr><td>Name of patient==rathnaa</td></tr>
-<tr><td>Edit allergy Button = true</td></tr>
-<tr><td>Delete allergy Button = true</td></tr>
-<tr><td>Logout Successfully completed</td></tr>
-<tr><td>Successfully login completed</td></tr>
-<tr><td>Page Title-NEMORx</td></tr>
-<tr><td>Name of patient==rathnaa</td></tr>
-<tr><td>Send Medication Button = true</td></tr>
-<tr><td>Medication Edit button = true</td></tr>
-<tr><td>Delete Medication Button = true</td></tr>
-<tr><td>Logout Successfully completed</td></tr>
+<tr><td>Name of patient==YBLKXSZI</td></tr>
+<tr><td>Add medication Button = true</td></tr>
+<tr><td>Drug Selected</td></tr>
+<tr><td>Successfully added medication. Would you like to add another medication?</td></tr>
+<tr><td>Successfully created allergy. Would you like to add another allergy?</td></tr>
 </table>
